--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,8 +7,7 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "lint": "eslint src --ext .ts",
-    "vercel-build": "npm install && tsc"
+    "lint": "eslint src --ext .ts"
   },
   "dependencies": {
     "express": "^4.18.2",
