--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,9 +16,6 @@
     "@floating-ui/react-dom": "^2.1.2",
     "@googlemaps/js-api-loader": "^1.16.8",
     "@react-google-maps/api": "^2.20.6",
-    "@supabase/auth-ui-react": "^0.4.7",
-    "@supabase/auth-ui-shared": "^0.1.8",
-    "@supabase/supabase-js": "^2.49.4",
     "@types/dompurify": "^3.0.5",
     "@types/mapbox-gl": "^3.4.1",
     "@types/marked": "^5.0.2",
@@ -75,5 +72,8 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.19"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.52.5"
   }
 }
