--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@types/compression": "^1.7.5",
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.6",
     "compression": "^1.7.4",
